{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 184,
  "lineage": "3366d32b-a737-23f6-1a6d-984b45585d1a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_a_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group/sg-0330e7dbc862c8b78",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0330e7dbc862c8b78",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_b_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group/sg-0023cc15ea9404741",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0023cc15ea9404741",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-040075380fe30b359"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vulnerable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c2b717d1c760a21",
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:instance/i-0f4de6f953ae5c2b4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4de6f953ae5c2b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a13d76518c52fe91",
            "private_dns": "ip-10-0-1-39.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-18-143-174-179.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.174.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "lab",
                  "ManagedBy": "Terraform",
                  "Project": "security-audit",
                  "Purpose": "CIS-Audit-Vulnerability-Lab"
                },
                "throughput": 125,
                "volume_id": "vol-05becf5d992e0b6b7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07a84c8f47b3ee598"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bee0b6b7a6f8972",
            "tags": {
              "Environment": "lab",
              "Instance": "Instance-1",
              "ManagedBy": "Terraform",
              "Name": "security-audit-ec2-vulnerable-1",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Vulnerabilities": "4,5"
            },
            "tags_all": {
              "Environment": "lab",
              "Instance": "Instance-1",
              "ManagedBy": "Terraform",
              "Name": "security-audit-ec2-vulnerable-1",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Vulnerabilities": "4,5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a84c8f47b3ee598"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_a",
            "aws_security_group.ec2_vulnerable",
            "aws_subnet.vpc_a_public_1",
            "aws_subnet.vpc_a_public_2",
            "aws_vpc.vpc_a",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c2b717d1c760a21",
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:instance/i-0d0fec5f2d5fe1ea3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0fec5f2d5fe1ea3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0547484c12b58e482",
            "private_dns": "ip-10-0-3-28.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.28",
            "public_dns": "ec2-18-142-237-175.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.237.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "lab",
                  "ManagedBy": "Terraform",
                  "Project": "security-audit",
                  "Purpose": "CIS-Audit-Vulnerability-Lab"
                },
                "throughput": 125,
                "volume_id": "vol-0579a0861c3e8a3b3",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07a84c8f47b3ee598"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bcd3d7051a17323",
            "tags": {
              "Environment": "lab",
              "Instance": "Instance-2",
              "ManagedBy": "Terraform",
              "Name": "security-audit-ec2-vulnerable-2",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Vulnerabilities": "4,5"
            },
            "tags_all": {
              "Environment": "lab",
              "Instance": "Instance-2",
              "ManagedBy": "Terraform",
              "Name": "security-audit-ec2-vulnerable-2",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Vulnerabilities": "4,5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a84c8f47b3ee598"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_a",
            "aws_security_group.ec2_vulnerable",
            "aws_subnet.vpc_a_public_1",
            "aws_subnet.vpc_a_public_2",
            "aws_vpc.vpc_a",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:internet-gateway/igw-094837aa3930a531e",
            "id": "igw-094837aa3930a531e",
            "owner_id": "141571819416",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-igw-a",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-igw-a",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "vpc_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:network-acl/acl-0a5b27cdca4a35571",
            "egress": [],
            "id": "acl-0a5b27cdca4a35571",
            "ingress": [],
            "owner_id": "141571819416",
            "subnet_ids": [
              "subnet-01bcd3d7051a17323",
              "subnet-04bee0b6b7a6f8972"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-nacl-vpc-a-public",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Vulnerability": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-nacl-vpc-a-public",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Vulnerability": "1"
            },
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.vpc_a_public_1",
            "aws_subnet.vpc_a_public_2",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "vpc_a_inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-912839741",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a5b27cdca4a35571",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.vpc_a_public",
            "aws_subnet.vpc_a_public_1",
            "aws_subnet.vpc_a_public_2",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "vpc_a_inbound_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2342697203",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a5b27cdca4a35571",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.vpc_a_public",
            "aws_subnet.vpc_a_public_1",
            "aws_subnet.vpc_a_public_2",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "vpc_a_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1446273398",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a5b27cdca4a35571",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.vpc_a_public",
            "aws_subnet.vpc_a_public_1",
            "aws_subnet.vpc_a_public_2",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "vpc_a_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-688819967",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a5b27cdca4a35571",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.vpc_a_public",
            "aws_subnet.vpc_a_public_1",
            "aws_subnet.vpc_a_public_2",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_a_private_to_vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0184c235ec1f9bfe23322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0184c235ec1f9bfe2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02b79bd691c998526"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_a_private",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc_peering_connection.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_a_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-094837aa3930a531e",
            "id": "r-rtb-0387a94a3347afbbe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0387a94a3347afbbe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_a",
            "aws_route_table.vpc_a_public",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_a_public_to_vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0387a94a3347afbbe3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0387a94a3347afbbe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02b79bd691c998526"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_a_public",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc_peering_connection.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_b_to_vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00c84bbf77b44c970179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c84bbf77b44c970",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02b79bd691c998526"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_b_private",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc_peering_connection.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:route-table/rtb-0184c235ec1f9bfe2",
            "id": "rtb-0184c235ec1f9bfe2",
            "owner_id": "141571819416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-rt-vpc-a-private",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-rt-vpc-a-private",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:route-table/rtb-0387a94a3347afbbe",
            "id": "rtb-0387a94a3347afbbe",
            "owner_id": "141571819416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-rt-vpc-a-public",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-rt-vpc-a-public",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:route-table/rtb-00c84bbf77b44c970",
            "id": "rtb-00c84bbf77b44c970",
            "owner_id": "141571819416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-rt-vpc-b-private",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-rt-vpc-b-private",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-040075380fe30b359"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_a_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a888c47e817656c",
            "route_table_id": "rtb-0184c235ec1f9bfe2",
            "subnet_id": "subnet-055dceade1135f761"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_a_private",
            "aws_subnet.vpc_a_private_1",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_a_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c4737ee26b266fd",
            "route_table_id": "rtb-0184c235ec1f9bfe2",
            "subnet_id": "subnet-0d653c1af32124730"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_a_private",
            "aws_subnet.vpc_a_private_2",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_a_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c236402420a8d146",
            "route_table_id": "rtb-0387a94a3347afbbe",
            "subnet_id": "subnet-04bee0b6b7a6f8972"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_a_public",
            "aws_subnet.vpc_a_public_1",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_a_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb369cfbb37cd6ec",
            "route_table_id": "rtb-0387a94a3347afbbe",
            "subnet_id": "subnet-01bcd3d7051a17323"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_a_public",
            "aws_subnet.vpc_a_public_2",
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f6d5426922ceb0e",
            "route_table_id": "rtb-00c84bbf77b44c970",
            "subnet_id": "subnet-0a1fc4775369f634b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_b_private",
            "aws_subnet.vpc_b_private",
            "aws_vpc.vpc_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_vulnerable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group/sg-07a84c8f47b3ee598",
            "description": "Vulnerable security group for CIS audit lab - allows SSH, RDP, SMB from anywhere",
            "egress": [],
            "id": "sg-07a84c8f47b3ee598",
            "ingress": [],
            "name": "security-audit-ec2-20260504170216520500000002",
            "name_prefix": "security-audit-ec2-",
            "owner_id": "141571819416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-sg-ec2-vulnerable",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Vulnerability": "3"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-sg-ec2-vulnerable",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Vulnerability": "3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_a_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:subnet/subnet-055dceade1135f761",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055dceade1135f761",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141571819416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-a-private-1",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-a-private-1",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_a_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:subnet/subnet-0d653c1af32124730",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d653c1af32124730",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141571819416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-a-private-2",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-a-private-2",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_a_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:subnet/subnet-04bee0b6b7a6f8972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bee0b6b7a6f8972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141571819416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-a-public-1",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-a-public-1",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_a_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:subnet/subnet-01bcd3d7051a17323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bcd3d7051a17323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141571819416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-a-public-2",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-a-public-2",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:subnet/subnet-0a1fc4775369f634b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1fc4775369f634b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141571819416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-b-private",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-subnet-vpc-b-private",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab",
              "Type": "Private"
            },
            "vpc_id": "vpc-040075380fe30b359"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:vpc/vpc-0b2e329ed907a3546",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0752d10abd5ca415d",
            "default_route_table_id": "rtb-0ecf24188148e903b",
            "default_security_group_id": "sg-0330e7dbc862c8b78",
            "dhcp_options_id": "dopt-0f7d391d0a01b35d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2e329ed907a3546",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ecf24188148e903b",
            "owner_id": "141571819416",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-vpc-a",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-vpc-a",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:vpc/vpc-040075380fe30b359",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b22c157096ce6832",
            "default_route_table_id": "rtb-0dafeed39afa917b2",
            "default_security_group_id": "sg-0023cc15ea9404741",
            "dhcp_options_id": "dopt-0f7d391d0a01b35d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-040075380fe30b359",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dafeed39afa917b2",
            "owner_id": "141571819416",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-vpc-b",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-vpc-b",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-02b79bd691c998526",
            "peer_owner_id": "141571819416",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-040075380fe30b359",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-peering-vpc-a-vpc-b",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-peering-vpc-a-vpc-b",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "vpc_id": "vpc-0b2e329ed907a3546"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-02b79bd691c998526",
            "peer_owner_id": "141571819416",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-040075380fe30b359",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-peering-accepter",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "security-audit-peering-accepter",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "vpc_id": "vpc-0b2e329ed907a3546",
            "vpc_peering_connection_id": "pcx-02b79bd691c998526"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc_peering_connection.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group-rule/sgr-04d0dd857ceadf14f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-04d0dd857ceadf14f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a84c8f47b3ee598",
            "security_group_rule_id": "sgr-04d0dd857ceadf14f",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "Allow all outbound traffic",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_vulnerable",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_outbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group-rule/sgr-062e13d6eb0be9915",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": -1,
            "id": "sgr-062e13d6eb0be9915",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a84c8f47b3ee598",
            "security_group_rule_id": "sgr-062e13d6eb0be9915",
            "tags": {
              "Name": "Allow all outbound traffic (IPv6)"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "Allow all outbound traffic (IPv6)",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_vulnerable",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_rdp_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group-rule/sgr-06cb8a1a35018a168",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3389,
            "id": "sgr-06cb8a1a35018a168",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a84c8f47b3ee598",
            "security_group_rule_id": "sgr-06cb8a1a35018a168",
            "tags": {
              "Name": "Allow RDP from anywhere (IPv4)"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "Allow RDP from anywhere (IPv4)",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_vulnerable",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_rdp_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group-rule/sgr-0369108b2b79a583d",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3389,
            "id": "sgr-0369108b2b79a583d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a84c8f47b3ee598",
            "security_group_rule_id": "sgr-0369108b2b79a583d",
            "tags": {
              "Name": "Allow RDP from anywhere (IPv6)"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "Allow RDP from anywhere (IPv6)",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_vulnerable",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_smb_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group-rule/sgr-0f51cf82025eacc09",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 445,
            "id": "sgr-0f51cf82025eacc09",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a84c8f47b3ee598",
            "security_group_rule_id": "sgr-0f51cf82025eacc09",
            "tags": {
              "Name": "Allow SMB from anywhere (IPv4)"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "Allow SMB from anywhere (IPv4)",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "to_port": 445
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_vulnerable",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_smb_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group-rule/sgr-0fd7da8329f0e19a0",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 445,
            "id": "sgr-0fd7da8329f0e19a0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a84c8f47b3ee598",
            "security_group_rule_id": "sgr-0fd7da8329f0e19a0",
            "tags": {
              "Name": "Allow SMB from anywhere (IPv6)"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "Allow SMB from anywhere (IPv6)",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "to_port": 445
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_vulnerable",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group-rule/sgr-06211349d078518fc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06211349d078518fc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a84c8f47b3ee598",
            "security_group_rule_id": "sgr-06211349d078518fc",
            "tags": {
              "Name": "Allow SSH from anywhere (IPv4)"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "Allow SSH from anywhere (IPv4)",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_vulnerable",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_ssh_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141571819416:security-group-rule/sgr-0667d286fe14dd495",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 22,
            "id": "sgr-0667d286fe14dd495",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a84c8f47b3ee598",
            "security_group_rule_id": "sgr-0667d286fe14dd495",
            "tags": {
              "Name": "Allow SSH from anywhere (IPv6)"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "Allow SSH from anywhere (IPv6)",
              "Project": "security-audit",
              "Purpose": "CIS-Audit-Vulnerability-Lab"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_vulnerable",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    }
  ]
}